--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-theme: jekyll-agency
+theme: jekyll-theme-minimal
 
 url    : "https://xenocurrency.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/papereasy" # the subpath of your site, e.g. /blog
