--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 theme: jekyll-theme-minimal
 
 url    : "https://xenocurrency.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: "/papereasy" # the subpath of your site, e.g. /blog
+baseurl: "/paper2sy" # the subpath of your site, e.g. /blog
 
 title      : paper easy
 email      : paper2sy@gmail.com #this is also the email contact forms will go to
