--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author     : paper2sy CEO
 locale: "en-US" # See available languages in _data/sitetext.yml
 
 analytics:
-  google: #Google Analytics tracking code here
+  google: G-YCD91BNLBW #Google Analytics tracking code here
 
 collections:
   portfolio:
