--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -40,7 +40,7 @@ en: &DEFAULT_EN
   about:
     title: "종이지"
     text: "ISBN 대행 서비스 전문 출판사"
-    body: "<심플하고 투명한 출판>이라는 슬로건을 갖고 일하는 출판사입니다"
+    body: "심플하고 투명한 출판을 위해 일하는 출판사입니다"
     section: about
 
   contact:
