--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -38,11 +38,10 @@ en: &DEFAULT_EN
     closebutton: "닫기"
 
   about:
-    title: "종이지 - ISBN 대행 전문 출판사"
-    text: "심플하고 투명한 출판을 위해 일하는 출판사입니다."
-    body: "[ISBN 발행 문의 양식]"
-       "[입력사항] "
-      "1) 책제목 : 
+    title: "ISBN 발행 요청 양식"
+    text: "카카오뱅크 3333-02-4258114 김주현"
+    body: "[입력사항] 
+      1) 책제목 : 
       2) 저자명 : 
       3) 파일형식 : EPUB2 / EPUB3 / PDF 중 택1 
         ※ 판유형 : 초판 (고정)
