--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -40,11 +40,23 @@ en: &DEFAULT_EN
   about:
     title: "ISBN 발행 대행 세부안내"
     text: "대행료 : ISBN 1개 발행 시 16,000원  /  입금처 : 카카오뱅크 3333-02-4258114 김주현"
-    body: "[입력사항]      1) 책제목 :       2) 저자명 :       3) 파일형식  EPUB2 / EPUB3 / PDF 중 택1         ※ 판유형 : 초판 (고정)        ※ 파일형식 : 전자책(e-book) (고정)       
-    4) 서비스 형태 : 온라인서비스 기타(다운로드, 스트리밍) (고정)       5) 가격 (정가) :     원 (※비매품/무료일 경우, 0원 입력필수)       6) 발행일 : YYYY-MM-DD       
-    7) 이메일 주소(ISBN 바코드 수령용)       8) 책의 총류(카테고리) : (간략하게 분류할 수 있으면 됩니다. 예시 : 자연과학/수학 )       9) 기타 특이사항 있으면 입력해주세요       
-                   [필수 동의사항 - 문의메일에 아래 내용을 함께 복사해서 보내주시면 동의한 것으로 간주합니다.]      10) 본 서비스는 전자책 전용 ISBN을 발급대행하는 서비스 입니다. 서비스 외 영역(출판,유통,정산,마케팅 등)에 관해서는 일절 관여하지 않아요          
-                   11) 도서정가제에 의거, 발행예정일이 지나면 발행예정일 및 정가 정보는 정정 불가합니다       12) 제공해주신 정보(책표지,제목,저자명 등)는 당사의 포트폴리오에 활용될 수 있습니다 
+    body: "[입력사항]      
+    1) 책제목 
+    2) 저자명 
+    3) 파일형식(EPUB2/EPUB3/PDF 중 택1) 
+    ※ 판유형 : 초판 (고정) 
+    ※ 파일형식 : 전자책(e-book) (고정)       
+    4) 서비스 형태 : 온라인서비스 기타(다운로드, 스트리밍) (고정)       
+    5) 가격 (정가) :     원 (※비매품/무료일 경우, 0원 입력필수)       
+    6) 발행일 : YYYY-MM-DD       
+    7) 이메일 주소(ISBN 바코드 수령용)
+    8) 책의 총류(카테고리) : (간략하게 분류할 수 있으면 됩니다. 예시 : 자연과학/수학 )
+    9) 기타 특이사항"       
+    body:
+    "[필수 동의사항 - 문의메일을 주신 경우 아래 내용에 대해 동의한 것으로 간주합니다.]
+    - 본 서비스는 전자책 전용 ISBN을 발급대행하는 서비스 입니다. 서비스 외 영역(출판,유통,정산,마케팅 등)에 관해서는 일절 관여하지 않습니다.
+    - 도서정가제에 의거, 발행예정일이 지나면 발행예정일 및 정가 정보는 정정 불가합니다.
+    - 제공해주신 정보(책표지,제목,저자명 등)는 당사의 포트폴리오에 활용될 수 있습니다.
       "
     section: about
 
