--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -25,10 +25,10 @@ en: &DEFAULT_EN
         desc: "ISBN 발행을 대행해드립니다. ISBN을 위해서 출판사 등록을 하실 필요가 없습니다."
         icon: fas fa-award #find more at https://fontawesome.com/icons
       - title: "수익 무배분"
-        desc: "저작물의 유통,배포,수익배분에는 일절 관여하지 않습니다. 저자의 수익은 오롯이 저자의 것입니다."
+        desc: "저작물의 유통,배포,수익 배분에는 일절 관여하지 않습니다. 저자의 수익은 오롯이 저자의 것입니다."
         icon: fas fa-coins
       - title: "납본"
-        desc: "납본은 ISBN 발행 후 반드시 해야 하는 절차입니다. 하지만 신경쓰지 마세요. ISBN 발행 대행 신청하시면 납본도 함께 대행해드립니다."
+        desc: "납본은 ISBN 발행 후 반드시 해야 하는 절차입니다. 하지만 신경쓰지 마세요. ISBN 발행 대행 신청하시면 납본도 함께 대행합니다."
         icon: fas fa-clipboard-check
 
   portfolio:
@@ -38,7 +38,7 @@ en: &DEFAULT_EN
     closebutton: "닫기"
 
   about:
-    title: "ISBN 발행 대행 세부안내"
+    title: "ISBN 발행 요청 양식"
     text: "대행료 : ISBN 1개 발행 시 16,000원  /  입금처 : 카카오뱅크 3333-02-4258114 김주현"
     body: "[입력사항]      
     1) 책제목 
@@ -51,12 +51,8 @@ en: &DEFAULT_EN
     6) 발행일 : YYYY-MM-DD       
     7) 이메일 주소(ISBN 바코드 수령용)
     8) 책의 총류(카테고리) : (간략하게 분류할 수 있으면 됩니다. 예시 : 자연과학/수학 )
-    9) 기타 특이사항
-    [필수 동의사항 - 문의메일을 주신 경우 아래 내용에 대해 동의한 것으로 간주합니다.]
-    - 본 서비스는 전자책 전용 ISBN을 발급대행하는 서비스 입니다. 서비스 외 영역(출판,유통,정산,마케팅 등)에 관해서는 일절 관여하지 않습니다.
-    - 도서정가제에 의거, 발행예정일이 지나면 발행예정일 및 정가 정보는 정정 불가합니다.
-    - 제공해주신 정보(책표지,제목,저자명 등)는 당사의 포트폴리오에 활용될 수 있습니다.
-      "
+    9) 기타 특이사항"
+   
     section: about
 
   contact:
