--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -38,20 +38,9 @@ en: &DEFAULT_EN
     closebutton: "닫기"
 
   about:
-    title: "ISBN 발행 요청 양식"
+    title: "ISBN 발행 요청 순서"
     text: "대행료 : ISBN 1개 발행 시 16,000원  /  입금처 : 카카오뱅크 3333-02-4258114 김주현"
-    body: "[입력사항]      
-    1) 책제목 
-    2) 저자명 
-    3) 파일형식(EPUB2/EPUB3/PDF 중 택1) 
-    ※ 판유형 : 초판 (고정) 
-    ※ 파일형식 : 전자책(e-book) (고정)       
-    4) 서비스 형태 : 온라인서비스 기타(다운로드, 스트리밍) (고정)       
-    5) 가격 (정가) :     원 (※비매품/무료일 경우, 0원 입력필수)       
-    6) 발행일 : YYYY-MM-DD       
-    7) 이메일 주소(ISBN 바코드 수령용)
-    8) 책의 총류(카테고리) : (간략하게 분류할 수 있으면 됩니다. 예시 : 자연과학/수학 )
-    9) 기타 특이사항"
+    body: "대행료 입금 → 저작물 정보 작성 → ISBN 발행요청 통해 메일발송
    
     section: about
 
