--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -40,12 +40,12 @@ en: &DEFAULT_EN
   about:
     title: "ISBN 발행 요청 순서"
     text: "대행료 : ISBN 1개 발행 시 16,000원  /  입금처 : 카카오뱅크 3333-02-4258114 김주현"
-    body: "대행료 입금 → 저작물 정보 작성 → ISBN 발행요청 통해 메일발송
+    body: "대행료 입금 → 저작물 정보 작성 → ISBN 발행요청 통해 메일발송"
    
     section: about
 
   contact:
-    title: "ISBN 발행 요청 - ISBN 1개당 16,000원" 
+    title: "ISBN 발행 요청 - ISBN 1개당 16,000원"
     text: "카카오뱅크 3333-02-4258114 김주현"
     section: contact
     name: "입금자명*"
