--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -11,7 +11,7 @@
 # -----------------
 en: &DEFAULT_EN
   header:
-    title: ISBN 발행 대행 서비스
+    title: ISBN 발급 전용 출판 서비스
     text: 종이지
     button: Tell Me More
     buttonlink: "#services"
@@ -21,14 +21,14 @@ en: &DEFAULT_EN
     text: "간단한 원스톱 ISBN 발행"
     section: services
     list:
-      - title: "ISBN 발행"
-        desc: "ISBN 발행을 대행해드립니다. ISBN을 위해서 출판사 등록을 하실 필요가 없습니다."
+      - title: "ISBN 발급 전용 출판"
+        desc: "ISBN 발급을 위해 출판사 등록을 하실 필요가 없습니다."
         icon: fas fa-award #find more at https://fontawesome.com/icons
       - title: "수익 무배분"
         desc: "저작물의 유통,배포,수익 배분에는 일절 관여하지 않습니다. 저자의 수익은 오롯이 저자의 것입니다."
         icon: fas fa-coins
       - title: "납본"
-        desc: "납본은 ISBN 발행 후 반드시 해야 하는 절차입니다. 하지만 신경쓰지 마세요. ISBN 발행 대행 신청하시면 납본도 함께 대행합니다."
+        desc: "납본은 ISBN 발급 후 반드시 해야 하는 절차입니다. ISBN 발급 전용 출판을 신청하시면 납본도 해드립니다."
         icon: fas fa-clipboard-check
 
   portfolio:
@@ -38,14 +38,14 @@ en: &DEFAULT_EN
     closebutton: "닫기"
 
   about:
-    title: "ISBN 발행 요청 순서"
-    text: "대행료 : ISBN 1개 발행 시 16,000원  /  입금처 : 카카오뱅크 3333-02-4258114 김주현"
-    body: "대행료 입금 → 저작물 정보 작성 → ISBN 발행요청 통해 메일발송"
+    title: "ISBN 발급 전용 출판 요청 순서"
+    text: "출판비 : ISBN 1개 당 16,000원  /  입금처 : 카카오뱅크 3333-02-4258114 김주현"
+    body: "비용 입금 → 저작물 정보 작성 → ISBN 발급요청 메일 보내기"
    
     section: about
 
   contact:
-    title: "ISBN 발행 요청 - ISBN 1개당 16,000원"
+    title: "ISBN 발급 전용 출판 - ISBN 1개당 16,000원"
     text: "카카오뱅크 3333-02-4258114 김주현"
     section: contact
     name: "입금자명*"
@@ -54,7 +54,7 @@ en: &DEFAULT_EN
     email-validation: "Please enter your email address."
     phone: "Phone Number"
     phone-validation: "Please enter your phone number."
-    message: "위 [ISBN 발행 문의 양식]을 복사하여 작성해주세요*"
+    message: "위 [ISBN 발급 문의 양식]을 복사하여 작성해주세요*"
     message-validation: "Please enter a message."
     subject: "Contact Form Submission"
     submit: "Send Message"
